[package]
name = "fantoccini_shiprock"
version = "0.1.0"
authors = ["Clifford T. Matthews <clifford.t.matthews@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.21.1"
serde_json = "1.0.96"
nom = "8.0"
digital-duration-nom = { version = "0.6.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1.68"
futures = "0.3.28"
anyhow = "1.0.71"

[dependencies.tokio]
version = "1.28.0"
features = ["macros", "time", "rt-multi-thread"]
