[package]
name = "fantoccini_shiprock"
version = "0.1.0"
authors = ["Clifford T. Matthews <clifford.t.matthews@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.22"
serde_json = "1.0.149"
nom = "8"
digital-duration-nom = { version = "0.6.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3.32"
anyhow = "1.0.102"

[dependencies.tokio]
version = "1.50.0"
features = ["macros", "time", "rt-multi-thread"]
